# romea-ros1-joy

./: CMakeLists.txt  romea_joy.rosinstall
config/: dualshock4.yaml  hj60ss.yaml  xbox.yaml  xbox_mapping.yaml
include/romea_joy/: joystick.hpp  joystick_directional_pad.hpp  joystick_mapping.hpp  joystick_stick.hpp  joystick_trigger.hpp
romea_joy/: CMakeLists.txt  package.xml  romea_joy.rosinstall
romea_joy/config/: xbox.yaml
romea_joy/include/romea_joy/: joystick.hpp  joystick_axis.hpp  joystick_button.hpp  joystick_directional_pad.hpp  joystick_mapping.hpp  joystick_stick.hpp  joystick_trigger.hpp
romea_joy/src/: joystick.cpp  joystick_axis.cpp  joystick_button.cpp  joystick_directional_pad.cpp  joystick_mapping.cpp  joystick_stick.cpp  joystick_trigger.cpp
romea_joy/test/: button_test.cpp  joystick.test  joystick_test.cpp  mapping_test.cpp  remapping.test  remapping_test.cpp  stick_test.cpp  trigger_test.cpp
romea_joy_bringup/: CMakeLists.txt  package.xml
romea_joy_bringup/launch/: dualshock4.launch  hj60ss.launch  xbox.launch
romea_joy_bringup/launch/common/: joy_common.launch
src/: joystick.cpp  joystick_mapping.cpp  joystick_trigger.cpp
test/: CMakeLists.txt  joystick_test.cpp  mapping.test  mapping_test.cpp  remapping.test  remapping_test.cpp  stick_test.cpp
