<?xml version="1.0"?>
<package format="2">

  <name>romea_joy</name>
  <version>0.1.0</version>
  <description>romea joy package</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>romea_common_utils</depend>

</package>
